--- a/Séries Temporais - Modelo ARIMA.ipynb
+++ b/Séries Temporais - Modelo ARIMA.ipynb
@@ -1181,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 512,
+   "execution_count": 582,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1207,9 +1207,9 @@
     "                        if model.hqic <= best_model_hqic:\n",
     "                            no_of_lower_metrics+=1\n",
     "                        if no_of_lower_metrics >= 2:\n",
-    "                            best_model_aic = np.round(model.aic,0)\n",
-    "                            best_model_bic = np.round(model.bic,0)\n",
-    "                            best_model_hqic = np.round(model.hqic,0)\n",
+    "                            best_model_aic = np.round(model.aic,2)\n",
+    "                            best_model_bic = np.round(model.bic,2)\n",
+    "                            best_model_hqic = np.round(model.hqic,2)\n",
     "                            best_model_order = (p_,d,q_) \n",
     "                            best_model_seasonal_order = (P_,D,Q_,s)\n",
     "                            current_best_model = model\n",
@@ -1228,20 +1228,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 513,
+   "execution_count": 583,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Melhor modelo até agora: SARIMA(0, 1, 0)x(0, 1, 0, 12) AIC:-524.0 BIC:-520.0 HQIC:-522.0 resid:1.002\n",
-      "Melhor modelo até agora: SARIMA(0, 1, 0)x(0, 1, 1, 12) AIC:-654.0 BIC:-647.0 HQIC:-651.0 resid:1.002\n",
-      "Melhor modelo até agora: SARIMA(0, 1, 0)x(1, 1, 2, 12) AIC:-657.0 BIC:-644.0 HQIC:-652.0 resid:1.002\n",
-      "Melhor modelo até agora: SARIMA(0, 1, 0)x(2, 1, 1, 12) AIC:-659.0 BIC:-646.0 HQIC:-654.0 resid:1.002\n",
-      "Melhor modelo até agora: SARIMA(0, 1, 1)x(0, 1, 1, 12) AIC:-677.0 BIC:-667.0 HQIC:-673.0 resid:1.001\n",
-      "Melhor modelo até agora: SARIMA(0, 1, 2)x(0, 1, 1, 12) AIC:-682.0 BIC:-669.0 HQIC:-677.0 resid:1.001\n",
-      "Melhor modelo até agora: SARIMA(1, 1, 1)x(0, 1, 1, 12) AIC:-683.0 BIC:-669.0 HQIC:-677.0 resid:1.001\n",
+      "Melhor modelo até agora: SARIMA(0, 1, 0)x(0, 1, 0, 12) AIC:-523.67 BIC:-520.34 HQIC:-522.32 resid:1.002\n",
+      "Melhor modelo até agora: SARIMA(0, 1, 0)x(0, 1, 1, 12) AIC:-654.05 BIC:-647.39 HQIC:-651.36 resid:1.002\n",
+      "Melhor modelo até agora: SARIMA(0, 1, 0)x(1, 1, 2, 12) AIC:-657.37 BIC:-644.04 HQIC:-651.98 resid:1.002\n",
+      "Melhor modelo até agora: SARIMA(0, 1, 0)x(2, 1, 1, 12) AIC:-658.94 BIC:-645.6 HQIC:-653.54 resid:1.002\n",
+      "Melhor modelo até agora: SARIMA(0, 1, 0)x(2, 1, 2, 12) AIC:-660.31 BIC:-643.64 HQIC:-653.57 resid:1.002\n",
+      "Melhor modelo até agora: SARIMA(0, 1, 1)x(0, 1, 1, 12) AIC:-677.49 BIC:-667.49 HQIC:-673.45 resid:1.001\n",
+      "Melhor modelo até agora: SARIMA(0, 1, 2)x(0, 1, 1, 12) AIC:-682.28 BIC:-668.95 HQIC:-676.89 resid:1.001\n",
+      "Melhor modelo até agora: SARIMA(1, 1, 1)x(0, 1, 1, 12) AIC:-682.64 BIC:-669.31 HQIC:-677.25 resid:1.001\n",
       "\n",
       "\n",
       "                                 Statespace Model Results                                 \n",
@@ -1249,7 +1250,7 @@
       "Dep. Variable:                PREÇO MÉDIO REVENDA   No. Observations:                  220\n",
       "Model:             SARIMAX(1, 1, 1)x(0, 1, 1, 12)   Log Likelihood                 345.320\n",
       "Date:                            Sun, 08 Dec 2019   AIC                           -682.640\n",
-      "Time:                                    17:31:57   BIC                           -669.309\n",
+      "Time:                                    18:30:32   BIC                           -669.309\n",
       "Sample:                                07-01-2001   HQIC                          -677.249\n",
       "                                     - 10-01-2019                                         \n",
       "Covariance Type:                              opg                                         \n",
@@ -1268,11 +1269,13 @@
       "===================================================================================\n",
       "\n",
       "Warnings:\n",
-      "[1] Covariance matrix calculated using the outer product of gradients (complex-step).\n"
+      "[1] Covariance matrix calculated using the outer product of gradients (complex-step).\n",
+      "Wall time: 3min 20s\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
     "best_model, models = best_sarima_model(train_data=log_transformed_data,p=range(3),q=range(3),P=range(3),Q=range(3))"
    ]
   },
